--- a/app/views/admin/gallery_categories/index.html.erb
+++ b/app/views/admin/gallery_categories/index.html.erb
@@ -9,8 +9,9 @@
 		<colgroup>
 			<col style="width:80px;" />
 			<col />
-			<col style="width:80px;" />
 			<col style="width:100px;" />
+			<col style="width:100px" />
+      <col style="width:130px" />
 			<% if can?(:update, GalleryCategory) || can?(:delete, GalleryCategory) %>
 			<col <%= raw manage_width(GalleryCategory) %> />
 			<% end %>
@@ -19,6 +20,7 @@
 			<tr>
 				<th><%= t(:label_number) %></th>
 				<th><%=t(:title,scope:[:activerecord,:attributes,:gallery_category]) %></th>
+				<th><%=t(:galleries_count,scope:[:activerecord,:attributes,:gallery_category]) %></th>
 				<th><%=t(:enable,scope:[:activerecord,:attributes,:gallery_category]) %></th>
 				<th><%= t(:label_created_at) %></th>
 				<% if can?(:update, GalleryCategory) || can?(:delete, GalleryCategory) %>
@@ -31,18 +33,21 @@
 			<% @admin_gallery_categories.each do |gallery_category| %>
 			<tr>
 				<td><%= link_to gallery_category.id,admin_gallery_category_path(gallery_category) %></td>
-				<td class="mw"><%= link_to gallery_category.title,admin_gallery_category_path(gallery_category) %></td>
+				<td><%= link_to gallery_category.title,admin_gallery_category_path(gallery_category) %></td>
+				<td><%= link_to gallery_category.galleries_count,admin_gallery_category_path(gallery_category) %></td>
 				<td><%= raw flagToString(gallery_category.enable) %></td>
 				<td><%= gallery_category.created_at.to_date %></td>
-				<% if can?(:update, GalleryCategory) || can?(:delete, GalleryCategory) %>
-				<td> <% if can? :update, gallery_category %>
+				<% if can?(:update, gallery_category) || can?(:delete, gallery_category) %>
+				<td>
+					<% if can? :update, gallery_category %>
 				<%= link_to edit_admin_gallery_category_path(gallery_category),:class=>"btn btn-default" do %> <i class="glyphicon glyphicon-pencil"></i> <%= t(:link_edit) %>
 				<% end %>
 				<% end %>
 				<% if can? :delete, gallery_category %>
 				<%= link_to admin_gallery_category_path(gallery_category), :method => :delete, :data => { :confirm => t(:delete_confirm) },:class=>"btn btn-danger" do %> <i class="glyphicon glyphicon-trash"></i> <%= t(:link_delete) %>
 				<% end %>
-				<% end %> </td>
+				<% end %>
+				</td>
 				<% end %>
 			</tr>
 			<% end %>
@@ -55,12 +60,14 @@
 	</table>
 </div>
 <div class="row">
-	<div class="col-xs-6 col-sm-3 col-md2">
+	<div class="col-xs-6 col-sm-3 col-md-2">
 		<% if can? :create, GalleryCategory %>
 		<%= link_to new_admin_gallery_category_path,:class=>"btn btn-primary" do %>
 		<i class="glyphicon glyphicon-plus"></i> <%= t(:link_new) %>
 		<% end %>
 		<% end %>
 	</div>
-	<%= paginate @admin_gallery_categories %>
+	<nav class="col-xs-12 col-sm-9 col-md-10">
+		<%= paginate @admin_gallery_categories %>
+	</nav>
 </div>
