--- a/app/views/admin/guest_books/index.html.erb
+++ b/app/views/admin/guest_books/index.html.erb
@@ -6,44 +6,49 @@
 </div>
 <div class="table-responsive">
   <table width="100%" cellpadding="0" cellspacing="0" class="table table-bordered table-striped">
-    <colgroup>
+		<colgroup>
       <col style="width:100px" />
       <col />
-      <col style="width:40px" />
+      <col />
       <col style="width:70px" />
+      <col style="width:100px" />
       <col style="width:130px" />
       <% if can?(:update, GuestBook) || can?(:delete, GuestBook) %>
       <col <%=raw manage_width(GuestBook) %> />
       <% end %>
     </colgroup>
     <thead>
-      <tr>
-        <th></th>
-        <th></th>
-        <th></th>
-        <th></th>
-        <th></th>
-        <th><p class="sl_manage"><%=t(:label_manage) %></p></th>
+			<tr>
+        <th><%=t(:label_number) %></th>
+        <th><%=t(:user_id,scope:[:activerecord,:attributes,:question]) %></th>
+        <th><%=t(:title,scope:[:activerecord,:attributes,:question]) %></th>
+        <th><%=t(:count,scope:[:activerecord,:attributes,:question]) %></th>
+        <th><%=t(:enable,scope:[:activerecord,:attributes,:question]) %></th>
+        <th><%=t(:label_created_at) %></th>
+				<% if can?(:update, GuestBook) || can?(:delete, GuestBook) %>
+        <th><%=t(:label_manage) %></th>
+				<% end %>
       </tr>
     </thead>
     <tbody>
       <% unless @admin_guest_books.empty? %>
       <% @admin_guest_books.each do |admin_guest_book| %>
-      <tr>
-        <td><p class="sl_name" title="<%=userName(admin_guest_book) %>"><%=userName(admin_guest_book,10) %></p></td>
-        <td><p><%= link_to admin_guest_book.title, admin_guest_book_path(admin_guest_book)  %></p></td>
-        <td class="sl_right"><p class="sl_count"></p></td>
-        <td class="sl_right"><p class="sl_count"></p></td>
-        <td class="sl_right"><p class="sl_registered_date"><%=admin_guest_book.created_at.to_date %></p></td>
+			<tr>
+				<td><%=link_to admin_guest_book.id, admin_guest_book_path(admin_guest_book) %></td>
+        <td><%=userName(admin_guest_book,10) %></td>
+        <td><%= link_to admin_guest_book.title, admin_guest_book_path(admin_guest_book) %></td>
+        <td><%=admin_guest_book.count+admin_guest_book.impressionist_count(:filter=>:ip_address) %></td>
+        <td><%= raw flagToString(admin_guest_book.enable) %></td>
+        <td><%=admin_guest_book.created_at.to_date %></td>
         <% if can?(:update, admin_guest_book) || can?(:delete, admin_guest_book) %>
         <td>
           <% if can? :update, admin_guest_book %>
-          <%= link_to edit_admin_guest_book_path(admin_guest_book),:class=>"btn btn-default btn-sm" do %>
+          <%= link_to edit_admin_guest_book_path(admin_guest_book),:class=>"btn btn-default" do %>
           <i class="glyphicon glyphicon-pencil"></i> <%=t(:link_edit) %>
           <% end %>
           <% end %>
           <% if can? :delete, admin_guest_book %>
-          <%= link_to admin_guest_book_path(admin_guest_book), :method => :delete, :data => { :confirm => t(:delete_confirm) },:class=>"btn btn-sm btn-danger pull-right" do %>
+          <%= link_to admin_guest_book_path(admin_guest_book), :method => :delete, :data => { :confirm => t(:delete_confirm) },:class=>"btn btn-danger" do %>
           <i class="glyphicon glyphicon-trash"></i> <%=t(:link_delete) %>
           <% end %>
           <% end %>
@@ -67,5 +72,7 @@
 		<% end %>
 		<% end %>
 	</div>
-	<%= paginate @admin_guest_books %>
+	<nav class="col-xs-12 col-sm-9 col-md-10">
+		<%= paginate @admin_guest_books %>
+	</nav>
 </div>
