--- a/app/views/admin/questions/index.html.erb
+++ b/app/views/admin/questions/index.html.erb
@@ -9,8 +9,9 @@
     <colgroup>
       <col style="width:100px" />
       <col />
-      <col style="width:40px" />
+      <col />
       <col style="width:70px" />
+      <col style="width:100px" />
       <col style="width:130px" />
       <% if can?(:update, Question) || can?(:delete, Question) %>
       <col <%=raw manage_width(Question) %> />
@@ -18,11 +19,12 @@
     </colgroup>
     <thead>
       <tr>
-        <th></th>
-        <th></th>
-        <th></th>
-        <th></th>
-        <th></th>
+        <th><%=t(:label_number) %></th>
+        <th><%=t(:user_id,scope:[:activerecord,:attributes,:question]) %></th>
+        <th><%=t(:title,scope:[:activerecord,:attributes,:question]) %></th>
+        <th><%=t(:count,scope:[:activerecord,:attributes,:question]) %></th>
+        <th><%=t(:enable,scope:[:activerecord,:attributes,:question]) %></th>
+        <th><%=t(:label_created_at) %></th>
         <th><%=t(:label_manage) %></th>
       </tr>
     </thead>
@@ -30,20 +32,21 @@
       <% unless @admin_questions.empty? %>
       <% @admin_questions.each do |admin_question| %>
       <tr>
-        <td><p class="sl_name" title="<%=userName(admin_question) %>"><%=userName(admin_question,10) %></p></td>
-        <td><p><%= link_to admin_question.title, admin_question_path(admin_question) %></p></td>
-        <td class="sl_right"><p class="sl_count"></p></td>
-        <td class="sl_right"><p class="sl_count"><%= admin_question.impressionist_count(:filter=>:ip_address) %></p></td>
-        <td class="sl_right"><p class="sl_registered_date"><%=admin_question.created_at.to_date %></p></td>
+				<td><%=link_to admin_question.id, admin_question_path(admin_question) %></td>
+        <td><%=userName(admin_question,10) %></td>
+        <td><%= link_to admin_question.title, admin_question_path(admin_question) %></td>
+        <td><%= admin_question.count+admin_question.impressionist_count(:filter=>:ip_address) %></td>
+        <td><%= raw flagToString(admin_question.enable) %></td>
+        <td><%=admin_question.created_at.to_date %></td>
         <% if can?(:update, admin_question) || can?(:delete, admin_question) %>
         <td>
           <% if can? :update, admin_question %>
-          <%= link_to edit_admin_question_path(admin_question),:class=>"btn btn-default btn-sm" do %>
+          <%= link_to edit_admin_question_path(admin_question),:class=>"btn btn-default" do %>
           <i class="glyphicon glyphicon-pencil"></i> <%=t(:link_edit) %>
           <% end %>
           <% end %>
           <% if can? :delete, admin_question %>
-          <%= link_to admin_question_path(admin_question), :method => :delete, :data => { :confirm => t(:delete_confirm) },:class=>"btn btn-sm btn-danger pull-right" do %>
+          <%= link_to admin_question_path(admin_question), :method => :delete, :data => { :confirm => t(:delete_confirm) },:class=>"btn btn-danger" do %>
           <i class="glyphicon glyphicon-trash"></i> <%=t(:link_delete) %>
           <% end %>
           <% end %>
@@ -60,12 +63,14 @@
   </table>
 </div>
 <div class="row">
-  <div class="col-xs-6 col-sm-3 col-md2">
+  <div class="col-xs-6 col-sm-3 col-md-2">
     <% if can? :create, Gallery %>
     <%= link_to new_admin_question_path,:class=>"btn btn-primary" do %>
     <i class="glyphicon glyphicon-plus"></i> <%= t(:link_new) %>
     <% end %>
     <% end %>
   </div>
-  <%= paginate @admin_questions %>
+	<nav class="col-xs-12 col-sm-9 col-md-10">
+  	<%= paginate @admin_questions %>
+	</nav>
 </div>
