--- a/app/views/admin/blog_categories/index.html.erb
+++ b/app/views/admin/blog_categories/index.html.erb
@@ -2,13 +2,14 @@
 	<h3 class="col-xs-12 col-sm-6"><%= @controller_name %> <%= actionNameChange controller.action_name %></h3>
 	<div class="col-xs-12 col-sm-6">
 
-	</div>	
+	</div>
 </div>
 <div class="table-responsive">
   <table width="100%" cellpadding="0" cellspacing="0" class="table table-bordered table-striped">
 		<colgroup>
       <col style="width:100px" />
       <col />
+      <col style="width:100px" />
       <col style="width:100px" />
       <col style="width:130px" />
       <% if can?(:update, BlogCategory) || can?(:delete, BlogCategory) %>
@@ -19,6 +20,7 @@
 			<tr>
 				<th><%= t(:label_number) %></th>
 				<th><%=t(:title,scope:[:activerecord,:attributes,:blog_category]) %></th>
+				<th><%=t(:blogs_count,scope:[:activerecord,:attributes,:blog_category]) %></th>
 				<th><%=t(:enable,scope:[:activerecord,:attributes,:blog_category]) %></th>
 				<th><%= t(:label_created_at) %></th>
 				<% if can?(:update, BlogCategory) || can?(:delete, BlogCategory) %>
@@ -32,6 +34,7 @@
 			<tr>
 				<td><%= link_to blog_category.id,admin_blog_category_path(blog_category) %></td>
 				<td><%= link_to blog_category.title,admin_blog_category_path(blog_category) %></td>
+				<td><%= link_to blog_category.blogs_count,admin_blog_category_path(blog_category) %></td>
 				<td><%= raw flagToString(blog_category.enable) %></td>
 				<td><%= blog_category.created_at.to_date %></td>
 				<% if can?(:update, BlogCategory) || can?(:delete, BlogCategory) %>
@@ -48,19 +51,21 @@
 			<% end %>
 			<% else %>
 			<tr>
-				<td colspan="5"><%= t(:no_data)%></td>
+				<td colspan="6"><%= t(:no_data)%></td>
 			</tr>
 			<% end %>
 		</tbody>
 	</table>
 </div>
 <div class="row">
-	<div class="col-xs-6 col-sm-3 col-md2">
+	<div class="col-xs-6 col-sm-3 col-md-2">
 		<% if can? :create, BlogCategory %>
 		<%= link_to new_admin_blog_category_path,:class=>"btn btn-primary" do %>
 		<i class="glyphicon glyphicon-plus"></i> <%= t(:link_new) %>
 		<% end %>
 		<% end %>
 	</div>
-	<%= paginate @admin_blog_categories %>
+	<nav class="col-xs-12 col-sm-9 col-md-10">
+		<%= paginate @admin_blog_categories %>
+	</nav>
 </div>
