--- a/app/views/admin/notices/index.html.erb
+++ b/app/views/admin/notices/index.html.erb
@@ -9,41 +9,46 @@
 		<colgroup>
       <col style="width:100px" />
       <col />
-      <col style="width:40px" />
+      <col />
       <col style="width:70px" />
+      <col style="width:100px" />
       <col style="width:130px" />
-      <% if can?(:update, Notice) || can?(:delete, Notice) %>
-      <col <%=raw manage_width(Notice) %> />
+      <% if can?(:update, GuestBook) || can?(:delete, GuestBook) %>
+      <col <%=raw manage_width(GuestBook) %> />
       <% end %>
     </colgroup>
     <thead>
-      <tr>
-        <th>이름</th>
-        <th>제목</th>
-        <th>댓글</th>
-        <th>조회</th>
-        <th>등록일</th>
+			<tr>
+        <th><%=t(:label_number) %></th>
+        <th><%=t(:user_id,scope:[:activerecord,:attributes,:question]) %></th>
+        <th><%=t(:title,scope:[:activerecord,:attributes,:question]) %></th>
+        <th><%=t(:count,scope:[:activerecord,:attributes,:question]) %></th>
+        <th><%=t(:enable,scope:[:activerecord,:attributes,:question]) %></th>
+        <th><%=t(:label_created_at) %></th>
+				<% if can?(:update, GuestBook) || can?(:delete, GuestBook) %>
         <th><%=t(:label_manage) %></th>
+				<% end %>
       </tr>
     </thead>
     <tbody>
       <% unless @admin_notices.empty? %>
       <% @admin_notices.each do |admin_notice| %>
-      <tr>
-        <td><p class="sl_name" title="<%=userName(admin_notice) %>"><%=userName(admin_notice,10) %></p></td>
-        <td><p><%= link_to admin_notice.title, admin_notice_path(admin_notice) %></p></td>
-        <td class="sl_right"><p class="sl_count"></p></td>
-        <td class="sl_right"><p class="sl_count"><%= admin_notice.impressionist_count(:filter=>:ip_address) %></p></td>
-        <td class="sl_right"><p class="sl_registered_date"><%=admin_notice.created_at.to_date %></p></td>
+			<tr>
+				<td><%=link_to admin_notice.id, admin_notice_path(admin_notice) %></td>
+        <td><%= userName(admin_notice,10) %></td>
+        <td><%= link_to admin_notice.title, admin_notice_path(admin_notice) %></td>
+        <td><%= admin_notice.count+admin_notice.impressionist_count(:filter=>:ip_address) %></td>
+        <td><%= raw flagToString(admin_notice.enable) %></td>
+        <td><%=admin_notice.created_at.to_date %></td>
         <% if can?(:update, admin_notice) || can?(:delete, admin_notice) %>
         <td>
           <% if can? :update, admin_notice %>
-          <%= link_to edit_admin_notice_path(admin_notice),:class=>"btn btn-default btn-sm" do %>
+          <%= link_to edit_admin_notice_path(admin_notice),:class=>"btn btn-default" do %>
           <i class="glyphicon glyphicon-pencil"></i> <%=t(:link_edit) %>
           <% end %>
           <% end %>
           <% if can? :delete, admin_notice %>
-          <%= link_to admin_notice_path(admin_notice), :method => :delete, :data => { :confirm => t(:delete_confirm) },:class=>"btn btn-sm btn-danger pull-right" do %>
+          <%= link_to admin_notice_path(admin_notice), :method => :delete, :data => { :confirm => t(:delete_confirm) },:class=>"btn btn-danger" do %>
           <i class="glyphicon glyphicon-trash"></i> <%=t(:link_delete) %>
           <% end %>
           <% end %>
@@ -67,5 +72,7 @@
 		<% end %>
 		<% end %>
 	</div>
-	<%= paginate @admin_notices %>
+	<nav class="col-xs-12 col-sm-9 col-md-10">
+		<%= paginate @admin_notices %>
+	</nav>
 </div>
