--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -7,38 +7,32 @@
 <div class="table-responsive">
   <table width="100%" cellpadding="0" cellspacing="0" class="table table-bordered table-striped">
 	<colgroup>
-		<col width="100px" />
+		<col style="width:100px" />
 		<col />
-		<col width="70px" />
-		<col width="130px" />
+		<col style="width:70px" />
+		<col style="width:130px" />
 	</colgroup>
 	<thead>
 			<tr>
-				<th><p class="sl_name">이름</p></th>
-				<th><p class="sl_title">제목</p></th>
-				<th class="sl_right"><p class="sl_count">조회</p></th>
-				<th class="sl_right"><p class="sl_registered_date">등록일</p></th>
+				<th><%=t(:label_number) %></th>
+				<th><%=t(:name,scope:[:activerecord,:attributes,:user]) %></th>
+				<th><%=t(:sign_in_count,scope:[:activerecord,:attributes,:user]) %></th>
+				<th><%=t(:label_created_at) %></th>
 			</tr>
 		</thead>
 		<tbody>
-			<tr class="none">
-				<td><p class="sl_name"></p></td>
-				<td><p><a class="sl_show_link" href="show.php"></a></p></td>
-				<td class="sl_right"><p class="sl_count"></p></td>
-				<td class="sl_right"><p class="sl_registered_date"></p></td>
-			</tr>
 			<% if @admin_users.empty? %>
 			<% @admin_users.each do |user| %>
 			<tr>
-				<td><p class="sl_name"><%= user.user.name %></p></td>
-				<td><p><%= link_to user.title, user  %></p></td>
-				<td class="sl_right"><p class="sl_count"><%= user.impressionist_count(:filter=>:ip_address) %></p></td>
-				<td class="sl_right"><p class="sl_registered_date"><%=user.created_at.to_date %></p></td>
+				<td><%= user.user.name %></td>
+				<td><%= link_to user.name, admin_user_path(user)  %></td>
+				<td><%= link_to sign_in_count, admin_user_path(user)  %></td>
+				<td><%= link_to user.created_at.to_date, admin_user_path(user) %></td>
 			</tr>
 			<% end %>
 			<% else %>
 			<tr>
-				<td colspan="4"><p>글이 없습니다.</p></td>
+				<td colspan="4"><%=t(:no_data) %></td>
 			</tr>
 			<% end %>
 		</table>
