수정함:        app/assets/javascripts/admin/application.js  	삭제함:        app/assets/javascripts/admin/new.js  	수정함:        app/controllers/admin/blog_categories_controller.rb  	수정함:        app/controllers/admin/blogs_controller.rb  	삭제함:        app/controllers/admin/faq_categories_controller.rb  	삭제함:        app/controllers/admin/faqs_controller.rb  	수정함:        app/controllers/admin/galleries_controller.rb  	수정함:        app/controllers/admin/gallery_categories_controller.rb  	수정함:        app/controllers/admin/guest_books_controller.rb  	삭제함:        app/controllers/admin/histories_controller.rb  	수정함:        app/controllers/admin/notices_controller.rb  	수정함:        app/controllers/admin/questions_controller.rb  	수정함:        app/views/admin/blog_categories/_form.html.erb  	수정함:        app/views/admin/blog_categories/edit.html.erb  	수정함:        app/views/admin/blog_categories/new.html.erb  	수정함:        app/views/admin/blog_categories/show.html.erb  	수정함:        app/views/admin/blogs/_form.html.erb  	수정함:        app/views/admin/blogs/edit.html.erb  	수정함:        app/views/admin/blogs/index.html.erb  	수정함:        app/views/admin/blogs/new.html.erb  	수정함:        app/views/admin/blogs/show.html.erb  	삭제함:        app/views/admin/contacts/_form.html.erb  	삭제함:        app/views/admin/contacts/edit.html.erb  	삭제함:        app/views/admin/contacts/index.html.erb  	삭제함:        app/views/admin/contacts/new.html.erb  	삭제함:        app/views/admin/contacts/show.html.erb  	삭제함:        app/views/admin/faqs/_form.html.erb  	삭제함:        app/views/admin/faqs/edit.html.erb  	삭제함:        app/views/admin/faqs/index.html.erb  	삭제함:        app/views/admin/faqs/new.html.erb  	삭제함:        app/views/admin/faqs/show.html.erb  	수정함:        app/views/admin/galleries/_form.html.erb  	수정함:        app/views/admin/galleries/edit.html.erb  	수정함:        app/views/admin/galleries/index.html.erb  	수정함:        app/views/admin/galleries/new.html.erb  	수정함:        app/views/admin/galleries/show.html.erb  	수정함:   

--- a/app/views/admin/blogs/_form.html.erb
+++ b/app/views/admin/blogs/_form.html.erb
@@ -1,31 +1,25 @@
-<%= form_for [:admin, @admin_blog],:html=>{:class=>'slboard_form'} do |f| %>
-	<% if @admin_blog.errors.any? %>
+<%= form_for [:admin, blog],:html => {:multipart => true,:class=>'slboard_form'} do |f| %>
+	<% if blog.errors.any? %>
 	<div id="error_explanation">
-		<h2><%= pluralize(@admin_blog.errors.count, "error") %> prohibited this notice from being saved:</h2>
+		<h2><%= pluralize(blog.errors.count, "error") %> prohibited this notice from being saved:</h2>
 		<ul>
-			<% @admin_blog.errors.full_messages.each do |msg| %>
+			<% blog.errors.full_messages.each do |msg| %>
 			<li><%= msg %></li>
 			<% end %>
 		</ul>
 	</div>
 	<% end %>
   <div class="form-group">
-    <%= f.label :blog_category_id,:class=>'control-label' %>
-    <div>
-      <%= f.select :blog_category_id, options_from_collection_for_select(BlogCategory.all, 'id', 'title',@blog_category_id),:class=>'form-control' %>
-    </div>
-  </div>  
+    <%= f.label :blog_category_id %>
+    <%= f.select :blog_category_id, options_from_collection_for_select(BlogCategory.all, 'id', 'title',@blog_category_id),:class=>'form-control' %>
+  </div>
   <div class="form-group">
     <%= f.label :title %>
-    <div>   
-      <%= f.text_field :title, :class=>'form-control', :required=>"required" %>
-    </div>
+    <%= f.text_field :title, :class=>'form-control', :required=>"required" %>
   </div>
   <div class="form-group">
     <%= f.label :description %>
-    <div>
-      <%= f.text_field :description, :class=>'form-control', :required=>"required" %>
-    </div>
+    <%= f.text_field :description, :class=>'form-control', :required=>"required" %>
   </div>
   <div class="form-group">
     <%= f.label :photo,:class=>'control-label' %>
@@ -40,9 +34,7 @@
   <%= f.fields_for :blog_content do |c| %>
   <div class="form-group">
     <%= c.label :content %>
-    <div>
     <%= c.text_area :content, :class=>'form-control',  :id => "sl_content" %>
-    </div>
   </div>
   <% end %>
   <div class="form-group actions">
