--- a/app/views/admin/galleries/index.html.erb
+++ b/app/views/admin/galleries/index.html.erb
@@ -20,10 +20,10 @@
 		<thead>
 			<tr>
 				<th><%=t(:label_number) %></th>
-				<th><%=t(:photo,scope:[:activerecord,:attributes,:blog]) %></th>
-				<th><%=t(:gallery_category_id,scope:[:activerecord,:attributes,:blog]) %></th>
-				<th><%=t(:title,scope:[:activerecord,:attributes,:blog]) %></th>
-				<th><%=t(:enable,scope:[:activerecord,:attributes,:blog]) %></th>
+				<th><%=t(:photo,scope:[:activerecord,:attributes,:gallery]) %></th>
+				<th><%=t(:gallery_category_id,scope:[:activerecord,:attributes,:gallery]) %></th>
+				<th><%=t(:title,scope:[:activerecord,:attributes,:gallery]) %></th>
+				<th><%=t(:enable,scope:[:activerecord,:attributes,:gallery]) %></th>
 				<th><%=t(:label_created_at) %></th>
 				<% if can?(:update, Gallery) || can?(:delete, Gallery) %>
 				<th><%= t(:label_manage) %></th>
@@ -70,7 +70,7 @@
 <div class="row">
   <div class="col-xs-6 col-sm-3 col-md-2">
     <% if can? :create, Gallery %>
-    <%= link_to new_admin_blog_category_path,:class=>"btn btn-primary" do %>
+    <%= link_to new_admin_gallery_path,:class=>"btn btn-primary" do %>
     <i class="glyphicon glyphicon-plus"></i> <%= t(:link_new) %>
     <% end %>
     <% end %>
