--- a/app/views/admin/gallery_categories/edit.html.erb
+++ b/app/views/admin/gallery_categories/edit.html.erb
@@ -1,3 +1,3 @@
-<%= render 'form',:faq=>@faq %>
-<%= link_to t(:link_show), admin_faq_path(@faq) %> |
-<%= link_to t(:link_list), admin_faqs_path %>
+<%= render 'form',:gallery_category=>@admin_gallery_category %>
+<%= link_to t(:link_show), admin_gallery_category_path(@admin_gallery_category) %> |
+<%= link_to t(:link_list), admin_gallery_categories_path %>
