--- a/app/views/admin/gallery_categories/new.html.erb
+++ b/app/views/admin/gallery_categories/new.html.erb
@@ -1,2 +1,2 @@
-<%= render 'form',:faq=>@faq %>
-<%= link_to t(:link_list), admin_faqs_path %>
+<%= render 'form',:gallery_category=>@admin_gallery_category %>
+<%= link_to t(:link_list), admin_gallery_categories_path %>
