--- a/app/views/admin/gallery_categories/show.html.erb
+++ b/app/views/admin/gallery_categories/show.html.erb
@@ -1,22 +1,22 @@
 <div class="sl_show">
 	<p>
-		<b><%=t(:title,scope:[:activerecord,:attributes,:report]) %></b>
-		<%= @faq.title %>
+		<b><%=t(:title,scope:[:activerecord,:attributes,:gallery_category]) %></b>
+		<%= @gallery_category.title %>
 	</p>
 	<p>
-		<b><%=t(:enable,scope:[:activerecord,:attributes,:report]) %></b>
-		<%=raw flagToString(@faq.enable) %>
+		<b><%=t(:enable,scope:[:activerecord,:attributes,:gallery_category]) %></b>
+		<%=raw flagToString(@gallery_category.enable) %>
 	</p>
 	<p>
   	<b><%=t(:label_created_at) %></b>
-  	<%= @faq.created_at %>
+  	<%= @gallery_category.created_at %>
   </p>
   <p>
   	<b><%=t(:label_updated_at) %></b>
-  	<%= @faq.created_at %>
+  	<%= @gallery_category.created_at %>
   </p>
 </div>
-<% if can? :update, Report %>
-<%= link_to t(:link_edit), edit_admin_faq_path(@faq) %> |
+<% if can? :update, GalleryCategory %>
+<%= link_to t(:link_edit), edit_admin_gallery_category_path(@gallery_category) %> |
 <% end %>
-<%= link_to t(:link_list), admin_faqs_path %>
+<%= link_to t(:link_list), admin_gallery_categories_path %>
