--- a/app/views/admin/guest_books/edit.html.erb
+++ b/app/views/admin/guest_books/edit.html.erb
@@ -1,5 +1,3 @@
-<section id="admin_guest_book_edit">
-  <%= render 'form' %>
-  <%= link_to t(:link_show), admin_guest_book_path(@admin_guest_book) %> |
-  <%= link_to t(:link_list), admin_guest_books_path %>
-</section>
+<%= render 'form',:guest_book=>@admin_guest_book %>
+<%= link_to t(:link_show), admin_guest_book_path(@admin_guest_book) %> |
+<%= link_to t(:link_list), admin_guest_books_path %>
