--- a/app/views/admin/guest_books/new.html.erb
+++ b/app/views/admin/guest_books/new.html.erb
@@ -1,4 +1,2 @@
-<section id="admin_guest_book_new">
-  <%= render 'form' %>
-  <%= link_to t(:link_list), admin_guest_books_path %>
-</section>
+<%= render 'form',:guest_book=>@admin_guest_book %>
+<%= link_to t(:link_list), admin_guest_books_path %>
