--- a/app/views/admin/notices/edit.html.erb
+++ b/app/views/admin/notices/edit.html.erb
@@ -1,5 +1,3 @@
-<section id="admin_notice_edit">
-  <%= render 'form' %>
-  <%= link_to t(:link_show), admin_notice_path(@admin_notice) %> |
-  <%= link_to t(:link_list), admin_notices_path %>
-</section>
+<%= render 'form',:notice=>@admin_notice %>
+<%= link_to t(:link_show), admin_notice_path(@admin_notice) %> |
+<%= link_to t(:link_list), admin_notices_path %>
