--- a/app/views/admin/blog_categories/_form.html.erb
+++ b/app/views/admin/blog_categories/_form.html.erb
@@ -1,10 +1,10 @@
-<%= form_for [:admin,faq] do |f| %>
-<% if faq.errors.any? %>
+<%= form_for [:admin,blog_category] do |f| %>
+<% if blog_category.errors.any? %>
 <div id="error_explanation" class="alert alert-danger">
 	<a href="#" class="close" data-dismiss="alert">&times;</a>
-	<h2><%= pluralize(faq.errors.count, "error") %> prohibited this request from being saved:</h2>
+	<h2><%= pluralize(blog_category.errors.count, "error") %> prohibited this request from being saved:</h2>
 	<ul>
-		<% faq.errors.full_messages.each do |msg| %>
+		<% blog_category.errors.full_messages.each do |msg| %>
 		<li>
 			<%= msg %>
 		</li>
