--- a/app/views/admin/blog_categories/edit.html.erb
+++ b/app/views/admin/blog_categories/edit.html.erb
@@ -1,3 +1,3 @@
-<%= render 'form',:faq=>@faq %>
-<%= link_to t(:link_show), admin_faq_path(@faq) %> |
-<%= link_to t(:link_list), admin_faqs_path %>
+<%= render 'form',:blog_category=>@admin_blog_category %>
+<%= link_to t(:link_show), admin_blog_category_path(@admin_blog_category) %> |
+<%= link_to t(:link_list), admin_blog_categories_path %>
