--- a/app/views/admin/blog_categories/show.html.erb
+++ b/app/views/admin/blog_categories/show.html.erb
@@ -1,22 +1,22 @@
 <div class="sl_show">
 	<p>
-		<b><%=t(:title,scope:[:activerecord,:attributes,:report]) %></b>
-		<%= @faq.title %>
+		<b><%=t(:title,scope:[:activerecord,:attributes,:blog_category]) %></b>
+		<%= @blog_category.title %>
 	</p>
 	<p>
-		<b><%=t(:enable,scope:[:activerecord,:attributes,:report]) %></b>
-		<%=raw flagToString(@faq.enable) %>
+		<b><%=t(:enable,scope:[:activerecord,:attributes,:blog_category]) %></b>
+		<%=raw flagToString(@blog_category.enable) %>
 	</p>
 	<p>
   	<b><%=t(:label_created_at) %></b>
-  	<%= @faq.created_at %>
+  	<%= @blog_category.created_at %>
   </p>
   <p>
   	<b><%=t(:label_updated_at) %></b>
-  	<%= @faq.created_at %>
+  	<%= @blog_category.created_at %>
   </p>
 </div>
-<% if can? :update, Report %>
-<%= link_to t(:link_edit), edit_admin_faq_path(@faq) %> |
+<% if can? :update, BlogCategory %>
+<%= link_to t(:link_edit), edit_admin_blog_category_path(@blog_category) %> |
 <% end %>
-<%= link_to t(:link_list), admin_faqs_path %>
+<%= link_to t(:link_list), admin_blog_categories_path %>
