--- a/app/views/admin/blogs/edit.html.erb
+++ b/app/views/admin/blogs/edit.html.erb
@@ -1,5 +1,3 @@
-<section id="admin_blog_edit">
-  <%= render 'form' %>
-  <%= link_to t(:link_show), admin_blog_path(@admin_blog) %> |
-  <%= link_to t(:link_list), admin_blogs_path %>
-</section>
+<%= render 'form',:blog=>@admin_blog %>
+<%= link_to t(:link_show), admin_blog_path(@admin_blog) %> |
+<%= link_to t(:link_list), admin_blogs_path %>
