--- a/app/views/admin/galleries/_form.html.erb
+++ b/app/views/admin/galleries/_form.html.erb
@@ -1,45 +1,35 @@
-<%= form_for [:admin, @admin_gallery],:html => {:multipart => true,:class=>'form-horizontal'} do |f| %>
-  <% if @admin_gallery.errors.any? %>
+<%= form_for [:admin, gallery],:html => {:multipart => true,:class=>'slboard_form'} do |f| %>
+  <% if gallery.errors.any? %>
   <div id="error_explanation">
-    <h2><%= pluralize(@admin_gallery.errors.count, "error") %> prohibited this notice from being saved:</h2>
+    <h2><%= pluralize(gallery.errors.count, "error") %> prohibited this notice from being saved:</h2>
     <ul>
-      <% @admin_gallery.errors.full_messages.each do |msg| %>
+      <% gallery.errors.full_messages.each do |msg| %>
       <li><%= msg %></li>
       <% end %>
     </ul>
   </div>
   <% end %>
   <div class="form-group">
-    <%= f.label :gallery_category_id,:class=>'col-sm-2 control-label' %>
-    <div class="col-sm-10">
-      <%= f.select :gallery_category_id, options_from_collection_for_select(GalleryCategory.where(:enable=>true), 'id', 'title',@gallery_category_id),:class=>'form-control' %>
-    </div>
+    <%= f.label :gallery_category_id %>
+    <%= f.select :gallery_category_id, options_from_collection_for_select(GalleryCategory.where(:enable=>true), 'id', 'title',@gallery_category_id),:class=>'form-control' %>
   </div>
   <div class="form-group">
-    <%= f.label :title,:class=>'col-sm-2 control-label' %>
-    <div class="col-sm-10">
-      <%= f.text_field :title,:class=>'form-control',:required=>'required' %>
-    </div>
+    <%= f.label :title %>
+    <%= f.text_field :title,:class=>'form-control',:required=>'required' %>
   </div>
   <div class="form-group">
-    <%= f.label :photo,:class=>'col-sm-2 control-label' %>
-    <div class="col-sm-10">
-      <% if @admin_gallery.photo? %>
-      <%= image_tag(@admin_gallery.photo.small_thumb) %>
+    <%= f.label :photo %>
+      <% if gallery.photo? %>
+      <%= image_tag(gallery.photo.small_thumb) %>
       <% end %>
       <%= f.file_field :photo %>
       <%= f.hidden_field :photo_cache %>
-    </div>
   </div>
   <div class="form-group">
-    <%= f.label :content,:class=>'col-sm-2 control-label' %>
-    <div class="col-sm-10">
-      <%= f.text_area :content,:class=>'form-control',:required=>'required' %>
-    </div>
+    <%= f.label :content %>
+    <%= f.text_area :content,:class=>'form-control',:required=>'required' %>
   </div>
   <div class="form-group actions">
-    <div class="col-sm-offset-2 col-sm-10">
-      <%= f.submit :class=>"btn btn-primary" %>
-    </div>
+    <%= f.submit :class=>"btn btn-primary" %>
   </div>
 <% end %>
