--- a/app/views/admin/guest_books/index.html.erb
+++ b/app/views/admin/guest_books/index.html.erb
@@ -22,7 +22,7 @@
         <th><%=t(:label_number) %></th>
         <th><%=t(:user_id,scope:[:activerecord,:attributes,:question]) %></th>
         <th><%=t(:title,scope:[:activerecord,:attributes,:question]) %></th>
-        <th><%=t(:count,scope:[:activerecord,:attributes,:question]) %></th>
+        <th><%=t(:label_count) %></th>
         <th><%=t(:enable,scope:[:activerecord,:attributes,:question]) %></th>
         <th><%=t(:label_created_at) %></th>
 				<% if can?(:update, GuestBook) || can?(:delete, GuestBook) %>
@@ -65,7 +65,7 @@
   </table>
 </div>
 <div class="row">
-	<div class="col-xs-6 col-sm-3 col-md2">
+	<div class="col-xs-6 col-sm-3 col-md-2">
 		<% if can? :create, GuestBook %>
 		<%= link_to new_admin_guest_book_path,:class=>"btn btn-primary" do %>
 		<i class="glyphicon glyphicon-plus"></i> <%= t(:link_new) %>
