--- a/app/views/admin/notices/_form.html.erb
+++ b/app/views/admin/notices/_form.html.erb
@@ -1,26 +1,33 @@
-<%= form_for [:admin, @admin_notice],:html=>{:class=>'slboard_form'} do |f| %>
-  <% if @admin_notice.errors.any? %>
+<%= form_for [:admin,notice] do |f| %>
+  <% if notice.errors.any? %>
   <div id="error_explanation">
-    <h2><%= pluralize(@admin_notice.errors.count, "error") %> prohibited this notice from being saved:</h2>
+    <h2><%= pluralize(notice.errors.count, "error") %> prohibited this notice from being saved:</h2>
     <ul>
-      <% @admin_notice.errors.full_messages.each do |msg| %>
+      <% notice.errors.full_messages.each do |msg| %>
       <li><%= msg %></li>
       <% end %>
     </ul>
   </div>
   <% end %>
   <div class="form-group">
-    <%= f.label :title %><br />
+    <%= f.label :title %>
     <%= f.text_field :title, :class=>'form-control', :required=>'required' %>
   </div>
   <%= f.fields_for :notice_content do |c| %>
   <div class="form-group">
-    <%= c.label :content %><br />
+    <%= c.label :content %>
     <%= c.text_area :content, :class=>'form-control', :id => "sl_content" %>
   </div>
   <% end %>
+  <div class="form-group">
+  	<%= f.label :count %>
+  	<%= f.number_field :count %>
+  </div>  
+  <div class="form-group">
+  	<%= f.label :enable %>
+  	<%= f.check_box :enable %>
+  </div>
   <div class="form-group actions">
     <%= f.submit :class=>"btn btn-primary" %>
   </div>
 <% end %>
-
