--- a/app/views/admin/notices/index.html.erb
+++ b/app/views/admin/notices/index.html.erb
@@ -22,7 +22,7 @@
         <th><%=t(:label_number) %></th>
         <th><%=t(:user_id,scope:[:activerecord,:attributes,:question]) %></th>
         <th><%=t(:title,scope:[:activerecord,:attributes,:question]) %></th>
-        <th><%=t(:count,scope:[:activerecord,:attributes,:question]) %></th>
+        <th><%=t(:label_count) %></th>
         <th><%=t(:enable,scope:[:activerecord,:attributes,:question]) %></th>
         <th><%=t(:label_created_at) %></th>
 				<% if can?(:update, GuestBook) || can?(:delete, GuestBook) %>
@@ -58,14 +58,14 @@
       <% end %>
       <% else %>
       <tr>
-        <td colspan="6"><p><%=t(:no_data) %></p></td>
+        <td colspan="6"><%=t(:no_data) %></td>
       </tr>
       <% end %>
     </tbody>
   </table>
 </div>
 <div class="row">
-	<div class="col-xs-6 col-sm-3 col-md2">
+	<div class="col-xs-6 col-sm-3 col-md-2">
 		<% if can? :create, Notice %>
 		<%= link_to new_admin_notice_path,:class=>"btn btn-primary" do %>
 		<i class="glyphicon glyphicon-plus"></i> <%= t(:link_new) %>
