--- a/app/views/admin/questions/_form.html.erb
+++ b/app/views/admin/questions/_form.html.erb
@@ -1,56 +1,33 @@
-<%= form_for [:admin, @admin_question],:html=>{:class=>'form-horizontal'} do |f| %>
-  <% if @admin_question.errors.any? %>
+<%= form_for [:admin,question] do |f| %>
+  <% if question.errors.any? %>
   <div id="error_explanation">
-    <h2><%= pluralize(@admin_question.errors.count, "error") %> prohibited this notice from being saved:</h2>
+    <h2><%= pluralize(question.errors.count, "error") %> prohibited this notice from being saved:</h2>
     <ul>
-      <% @admin_question.errors.full_messages.each do |msg| %>
+      <% question.errors.full_messages.each do |msg| %>
       <li><%= msg %></li>
       <% end %>
     </ul>
   </div>
   <% end %>
-  <% unless user_signed_in? %>
   <div class="form-group">
-    <%= f.label :name, :class=>'col-sm-2 control-label' %>
-    <div class="col-sm-10">
-      <%= f.text_field :name, :class=>'form-control', :required=>'required' %>
-    </div>
-  </div>
-  <div class="form-group">
-    <%= f.label :password, :class=>'col-sm-2 control-label' %>
-    <div class="col-sm-10">
-      <%= f.password_field :password, :class=>'form-control', :required=>'required' %>
-    </div>
-  </div>
-  <% end %>
-  <div class="form-group">
-    <%= f.label :title, :class=>'col-sm-2 control-label' %>
-    <div class="col-sm-10">
-      <%= f.text_field :title, :class=>'form-control', :required=>'required' %>
-    </div>
-  </div>
-  <div class="form-group">
-    <%= f.label :secret, :class=>'col-sm-2 control-label' %>
-    <div class="col-sm-10">
-      <%= f.check_box :secret, :class=>'form-control' %>
-    </div>
+    <%= f.label :title %>
+    <%= f.text_field :title, :class=>'form-control', :required=>'required' %>
   </div>
   <%= f.fields_for :question_content do |c| %>
   <div class="form-group">
-    <%= c.label :content, :class=>'col-sm-2 control-label' %>
-    <div class="col-sm-10">
-      <%= c.text_area :content, :class=>'form-control', :rows=>5, :required=>'required'  %>
-    </div>
+    <%= c.label :content %>
+    <%= c.text_area :content, :class=>'form-control', :id => "sl_content" %>
   </div>
   <% end %>
-  <% if Rails.env.production? %>
   <div class="form-group">
-    <div class="col-sm-offset-2 col-sm-10"><%= recaptcha_tags :display => { :theme => "clean" } %></div>
+  	<%= f.label :count %>
+  	<%= f.number_field :count %>
   </div>
-  <% end %>
+  <div class="form-group">
+  	<%= f.label :enable %>
+  	<%= f.check_box :enable %>
+  </div>
   <div class="form-group actions">
-    <div class="col-sm-offset-2 col-sm-10">
-      <%= f.submit :class=>'btn btn-primary' %>
-    </div>
+    <%= f.submit :class=>"btn btn-primary" %>
   </div>
 <% end %>
