--- a/app/views/admin/questions/edit.html.erb
+++ b/app/views/admin/questions/edit.html.erb
@@ -1,5 +1,3 @@
-<section id="admin_question_edit">
-  <%= render 'form' %>
-  <%= link_to t(:link_show), admin_question_path(@admin_question) %> |
-  <%= link_to t(:link_list), admin_questions_path %>
-</section>
+<%= render 'form',:question=>@admin_question %>
+<%= link_to t(:link_show), admin_question_path(@admin_question) %> |
+<%= link_to t(:link_list), admin_questions_path %>
