--- a/app/views/admin/questions/index.html.erb
+++ b/app/views/admin/questions/index.html.erb
@@ -22,7 +22,7 @@
         <th><%=t(:label_number) %></th>
         <th><%=t(:user_id,scope:[:activerecord,:attributes,:question]) %></th>
         <th><%=t(:title,scope:[:activerecord,:attributes,:question]) %></th>
-        <th><%=t(:count,scope:[:activerecord,:attributes,:question]) %></th>
+        <th><%=t(:label_count) %></th>
         <th><%=t(:enable,scope:[:activerecord,:attributes,:question]) %></th>
         <th><%=t(:label_created_at) %></th>
         <th><%=t(:label_manage) %></th>
@@ -56,7 +56,7 @@
       <% end %>
       <% else %>
       <tr>
-        <td colspan="6"><p><%=t(:no_data) %></p></td>
+        <td colspan="6"><%=t(:no_data) %></td>
       </tr>
       <% end %>
     </tbody>
