--- a/app/views/admin/users/_form.html.erb
+++ b/app/views/admin/users/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for [:admin, @admin_user],:html=>{:class=>'slboard_form'} do |f| %>
+<%= form_for [:admin, @admin_user],:html => {:multipart => true,:class=>'slboard_form'} do |f| %>
 	<% if @admin_user.errors.any? %>
 	<div id="error_explanation">
 		<h2><%= pluralize(@admin_user.errors.count, "error") %> prohibited this notice from being saved:</h2>
