--- a/app/views/admin/blogs/show.html.erb
+++ b/app/views/admin/blogs/show.html.erb
@@ -1,11 +1,19 @@
 <div class="sl_show">
 	<p>
 		<b><%=t(:title,scope:[:activerecord,:attributes,:blog]) %></b>
-		<%= @blog.title %>
+		<%= @admin_blog.title %>
 	</p>
 	<p>
+  	<b><%=t(:content,scope:[:activerecord,:attributes,:blog_content]) %></b>
+		<%= simple_format(@admin_blog.blog_content.content) %>
+	</p>
+	<p>
+  	<b><%=t(:label_count) %></b>
+  	<%=@admin_blog.count+@admin_blog.impressionist_count(:filter=>:ip_address) %>
+  </p>
+	<p>
 		<b><%=t(:enable,scope:[:activerecord,:attributes,:blog]) %></b>
-		<%=raw flagToString(@blog.enable) %>
+		<%=raw flagToString(@admin_blog.enable) %>
 	</p>
 	<p>
   	<b><%=t(:label_created_at) %></b>
@@ -17,6 +25,6 @@
   </p>
 </div>
 <% if can? :update, Blog %>
-<%= link_to t(:link_edit), edit_admin_blog_path(@blog) %> |
+<%= link_to t(:link_edit), edit_admin_blog_path(@admin_blog) %> |
 <% end %>
 <%= link_to t(:link_list), admin_blogs_path %>
