--- a/app/views/admin/guest_books/show.html.erb
+++ b/app/views/admin/guest_books/show.html.erb
@@ -8,6 +8,10 @@
   	<%=@admin_guest_book.count+@admin_guest_book.impressionist_count(:filter=>:ip_address) %>
   </p>
 	<p>
+  	<b><%=t(:content,scope:[:activerecord,:attributes,:guest_book_content]) %></b>
+		<%= simple_format(@admin_guest_book.guest_book_content.content) %>
+	</p>
+	<p>
 		<b><%=t(:enable,scope:[:activerecord,:attributes,:guest_book]) %></b>
 		<%=raw flagToString(@admin_guest_book.enable) %>
 	</p>
