--- a/app/views/admin/questions/show.html.erb
+++ b/app/views/admin/questions/show.html.erb
@@ -1,14 +1,18 @@
 <div class="sl_show">
 	<p>
-		<b><%=t(:title,scope:[:activerecord,:attributes,:blog]) %></b>
+		<b><%=t(:title,scope:[:activerecord,:attributes,:question]) %></b>
 		<%= @admin_question.title %>
+	</p>
+	<p>
+  	<b><%=t(:content,scope:[:activerecord,:attributes,:question_content]) %></b>
+		<%= simple_format(@admin_question.question_content.content) %>
 	</p>
 	<p>
   	<b><%=t(:label_count) %></b>
   	<%=@admin_question.count+@admin_question.impressionist_count(:filter=>:ip_address) %>
   </p>
 	<p>
-		<b><%=t(:enable,scope:[:activerecord,:attributes,:blog]) %></b>
+		<b><%=t(:enable,scope:[:activerecord,:attributes,:question]) %></b>
 		<%=raw flagToString(@admin_question.enable) %>
 	</p>
 	<p>
