--- a/app/views/admin/blogs/_form.html.erb
+++ b/app/views/admin/blogs/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for [:admin, blog],:html => {:multipart => true,:class=>'slboard_form'} do |f| %>
+<%= form_for [:admin, blog],:html => {:multipart => true} do |f| %>
 	<% if blog.errors.any? %>
 	<div id="error_explanation">
 		<h2><%= pluralize(blog.errors.count, "error") %> prohibited this notice from being saved:</h2>
