--- a/app/views/admin/galleries/_form.html.erb
+++ b/app/views/admin/galleries/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for [:admin, gallery],:html => {:multipart => true,:class=>'slboard_form'} do |f| %>
+<%= form_for [:admin, gallery],:html => {:multipart => true} do |f| %>
   <% if gallery.errors.any? %>
   <div id="error_explanation">
     <h2><%= pluralize(gallery.errors.count, "error") %> prohibited this notice from being saved:</h2>
