--- a/app/views/admin/galleries/index.html.erb
+++ b/app/views/admin/galleries/index.html.erb
@@ -62,7 +62,7 @@
 			<% end %>
 			<% else %>
 			<tr>
-        <td colspan="5"><p><%=t(:no_data) %></p></td>
+        <td colspan="5"><%=t(:no_data) %></td>
 			</tr>
 			<% end %>
 		</table>
