수정함:        app/assets/javascripts/application.js 	삭제함:        app/assets/javascripts/cable.js 	삭제함:        app/assets/javascripts/galleries.js.erb 	삭제함:        app/assets/javascripts/npm.js 	수정함:        app/controllers/application_controller.rb 	수정함:        app/controllers/blogs_controller.rb 	수정함:        app/controllers/board_controller.rb 	수정함:        app/controllers/galleries_controller.rb 	수정함:        app/controllers/guest_books_controller.rb 	수정함:        app/views/admin/blog_categories/index.html.erb 	수정함:        app/views/admin/blogs/show.html.erb 	수정함:        app/views/admin/galleries/show.html.erb 	수정함:        app/views/admin/gallery_categories/show.html.erb 	수정함:        app/views/admin/guest_books/show.html.erb 	수정함:        app/views/admin/notices/show.html.erb 	수정함:        app/views/admin/questions/show.html.erb 	수정함:        app/views/admin/users/index.html.erb 	수정함:        app/views/layouts/application.html.erb 	수정함:        config/locales/ko.yml

--- a/app/views/admin/galleries/show.html.erb
+++ b/app/views/admin/galleries/show.html.erb
@@ -16,7 +16,7 @@
   	<%= @admin_gallery.created_at %>
   </p>
 </div>
-<% if can? :update, Gallery %>
+<% if can? :update, @admin_gallery %>
 <%= link_to t(:link_edit), edit_admin_gallery_path(@admin_gallery) %> |
 <% end %>
 <%= link_to t(:link_list), admin_galleries_path %>
