--- a/app/views/admin/blog_categories/index.html.erb
+++ b/app/views/admin/blog_categories/index.html.erb
@@ -37,7 +37,7 @@
 				<td><%= link_to blog_category.blogs_count,admin_blog_category_path(blog_category) %></td>
 				<td><%= raw flagToString(blog_category.enable) %></td>
 				<td><%= blog_category.created_at.to_date %></td>
-				<% if can?(:update, BlogCategory) || can?(:delete, BlogCategory) %>
+				<% if can?(:update, blog_category) || can?(:delete, blog_category) %>
 				<td>
 				<% if can? :update, blog_category %>
 				<%= link_to edit_admin_blog_category_path(blog_category),:class=>"btn btn-default" do %> <i class="glyphicon glyphicon-pencil"></i> <%= t(:link_edit) %>
