--- a/app/views/admin/blogs/show.html.erb
+++ b/app/views/admin/blogs/show.html.erb
@@ -24,7 +24,7 @@
   	<%= @blog.created_at %>
   </p>
 </div>
-<% if can? :update, Blog %>
+<% if can? :update, @blog %>
 <%= link_to t(:link_edit), edit_admin_blog_path(@admin_blog) %> |
 <% end %>
 <%= link_to t(:link_list), admin_blogs_path %>
