--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -38,12 +38,14 @@
 		</table>
 	</div>
 	<div class="row">
-	  <div class="col-xs-6 col-sm-3 col-md2">
+	  <div class="col-xs-6 col-sm-3 col-md-2">
 	    <% if can? :create, User %>
 	    <%= link_to new_admin_user_path,:class=>"btn btn-primary" do %>
 	    <i class="glyphicon glyphicon-plus"></i> <%= t(:link_new) %>
 	    <% end %>
 	    <% end %>
-	  </div>
-	  <%= paginate @admin_users %>
+		</div>
+		<nav class="col-xs-12 col-sm-9 col-md-10">
+	  	<%= paginate @admin_users %>
+		</nav>
 	</div>
