--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,56 +1,55 @@
 <!DOCTYPE html>
 <html lang="<%=I18n.locale %>">
 <head>
-	<meta charset="utf-8" />
-	<%=display_meta_tags :site => t(:application_name),
+<meta charset="utf-8">
+<%=display_meta_tags :site => t(:application_name),
 	:title=>@title,
 	:description => @meta_description,
 	:keywords => @meta_keywords,
 	:separator => t(:title_separator),
-	:viewport => 'width=device-width, initial-scale=1.0, user-scalable=no',
+	:viewport => 'width=device-width, initial-scale=1.0, user-scalable=yes',
 	:reverse => true %>
-	<%=display_meta_tags og: {
+<%=display_meta_tags og: {
   	title:   @title,
   	description: @meta_description,
   	url:      @meta_url,
   	image:    @meta_image
-	}
-	%>
-	<meta name="author" content="Sleeping-Lion">
-	<link rel="shortcut icon" href="<%=asset_path 'favicon.ico' %>">
-	<%= stylesheet_link_tag "application", :media=>"all", "data-turbolinks-track" => true %>
-	<%= csrf_meta_tags %>
-	<!--[if IE]>
-	<meta http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1" />
-	<![endif]-->
+	} %>
+<meta name="author" content="Sleeping-Lion">
+<link rel="shortcut icon" href="<%=asset_path 'favicon.ico' %>">
+<%= stylesheet_link_tag "application", :media=>"all", "data-turbolinks-track" => true %>
+<%= csrf_meta_tags %>
+<!--[if IE]>
+<meta http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1" />
+<![endif]-->
 </head>
 <body itemscope itemtype="<%=@page_itemtype %>">
-	<%= render :partial => 'layouts/header' %>
-	<div id="mom">
-		<div id="main" class="container">
-				<% if current_page?(root_path) %>
-				<div class="jumbotron hero-unit">
-					<h2><%=raw t(:home_main_title) %></h2>
-					<p class="lead"><%=raw t(:home_main_description) %></p>
-					<%=link_to '깨끗한 웹을 꿈꾸고 있습니다','/home/popup',:class=>'modal_link btn btn-large btn-success',:'data-toggle'=>"modal",:'data-target'=>"#myModal" %>
-				</div>
-				<hr class="none">
-				<div class="row">
-				<div id="main_main" class="sub_main col-xs-12 col-lg-8">
-				<% else %>
-				<%= render 'layouts/page_header' %>
-				<div class="row">
+<%= render :partial => 'layouts/header' %>
+<div id="mom">
+	<div id="main" class="container">
+		<% if current_page?(root_path) %>
+		<div class="jumbotron hero-unit">
+			<h2><%=raw t(:home_main_title) %></h2>
+			<p class="lead"><%=raw t(:home_main_description) %></p>
+			<%=link_to '깨끗한 웹을 꿈꾸고 있습니다','/home/popup',:class=>'modal_link btn btn-large btn-success',:'data-toggle'=>"modal",:'data-target'=>"#myModal" %>
+		</div>
+		<hr class="none">
+		<div class="row">
+			<div id="main_main" class="sub_main col-xs-12 col-lg-8">
+		<% else %>
+			<%= render 'layouts/page_header' %>
+			<div class="row">
 				<div class="sub_main col-xs-12 col-lg-8">
-				<% end %>
+		<% end %>
 				<%= render 'layouts/ad' %>
 				<%=yield %>
 				</div>
 				<%= render 'layouts/aside' %>
-			</div>
 		</div>
 	</div>
-	<%= render :partial => 'layouts/footer' %>
-	<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true"></div>
-	<%= javascript_include_tag @script, "data-turbolinks-track" => true %>
+</div>
+<%= render :partial => 'layouts/footer' %>
+<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-hidden="true"></div>
+<%= javascript_include_tag :application, "data-turbolinks-track" => true %>
 </body>
 </html>
