--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,6 +17,7 @@
 	} %>
 <meta name="author" content="Sleeping-Lion" />
 <link rel="shortcut icon" href="<%=asset_path 'favicon.ico' %>" />
+<link rel="alternate" type="application/rss+xml" title="Sleeping-Lion RSS Feed" href="https://www.sleepinglion.pe.kr/feed?format=rss">
 <%= stylesheet_link_tag "application", :media=>"all", "data-turbolinks-track" => true %>
 <%= csrf_meta_tags %>
 <!--[if IE]>
