수정함:        app/controllers/home_controller.rb 	수정함:        app/views/home/feed.rss.builder 	수정함:        app/views/layouts/application.html.erb 	수정함:        config/environments/production.rb 	수정함:        config/routes.rb

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,7 +17,7 @@
 	} %>
 <meta name="author" content="Sleeping-Lion" />
 <link rel="shortcut icon" href="<%=asset_path 'favicon.ico' %>" />
-<link rel="alternate" type="application/rss+xml" title="Sleeping-Lion RSS Feed" href="https://www.sleepinglion.pe.kr/feed?format=rss">
+<link rel="alternate" type="application/rss+xml" title="Sleeping-Lion RSS Feed" href="http://www.sleepinglion.pe.kr/feed?format=rss" />
 <%= stylesheet_link_tag "application", :media=>"all", "data-turbolinks-track" => true %>
 <%= csrf_meta_tags %>
 <!--[if IE]>
