--- a/app/views/layouts/admin/application.html.erb
+++ b/app/views/layouts/admin/application.html.erb
@@ -8,7 +8,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="shortcut icon" href="<%=asset_path 'favicon.ico' %>">
 	<%= csrf_meta_tags %>
-	<%= stylesheet_link_tag "admin/application", :media=>"all", "data-turbolinks-track" => true %>
+	<%= stylesheet_link_tag 'admin/application', :media=>'all', 'data-turbolinks-track' => true %>
 	<!--[if IE]>
 	<meta http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1" />
 	<![endif]-->
@@ -43,6 +43,6 @@
 			</div>
 	<%= render 'layouts/admin/footer' %>
 	<div class="modal fade" id="myModal" tabindex="-1" role="dialog"></div>
-	<%= javascript_include_tag @script %>
+	<%= javascript_include_tag 'admin/application', 'data-turbolinks-track' => true %>
 </body>
 </html>
