수정함:        app/views/layouts/admin/application.html.erb 	수정함:        app/views/layouts/admin/login.html.erb

--- a/app/views/layouts/admin/application.html.erb
+++ b/app/views/layouts/admin/application.html.erb
@@ -5,10 +5,10 @@
 	<title><%=t(:application_name)%></title>
 	<meta name="description" content="<%=t(:application_name)%> Admin System">
 	<meta name="author" content="Sleeping-Lion">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="shortcut icon" href="<%=asset_path 'favicon.ico' %>">
-	<%= csrf_meta_tags %>
+	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=yes">
 	<%= stylesheet_link_tag 'admin/application', :media=>'all', 'data-turbolinks-track' => true %>
+	<%= favicon_link_tag 'favicon.ico' %>
+	<%= csrf_meta_tags %>
 	<!--[if IE]>
 	<meta http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1" />
 	<![endif]-->
