--- a/app/views/blogs/show.html.erb
+++ b/app/views/blogs/show.html.erb
@@ -2,40 +2,34 @@
 <% if notice %>
 <%= render :partial => 'layouts/notice',:locals=>{:notice=>notice} %>
 <% end %>
-<div id="sl_blog_show" itemscope itemprop="blogPost" itemtype="http://schema.org/Blog">	
+<div id="sl_blog_show" itemscope itemprop="blogPost" itemtype="http://schema.org/Blog">
 	<div class="slboard_content">
 		<div class="sl_content_header box_header">
 			<h2 itemprop="name"><%= @blog.title %></h2>
 			<span class="none" itemprop="genre"><%=@blog.blog_category_id %></span>
-			<p>작성자 :  <%= render :partial => 'users/data', :locals => { :user => @blog.user, :itemprop => 'author' } %> &nbsp;&nbsp;&nbsp; <%=t(:label_created_at)%> : <span itemprop="dateCreated"><%= @blog.created_at %></span><span class="none" itemprop="dateModified"><%= @blog.updated_at %></span></p>			
+			<p>작성자 :  <%= render :partial => 'users/data', :locals => { :user => @blog.user, :itemprop => 'author' } %> &nbsp;&nbsp;&nbsp; <%=t(:label_created_at)%> : <span itemprop="dateCreated"><%= @blog.created_at %></span><span class="none" itemprop="dateModified"><%= @blog.updated_at %></span></p>
 		</div>
 		<div class="sl_content_main">
 			<div class="sl_content_text" itemprop="text"><%= simple_format(@blog.blog_content.content) %></div>
 		</div>
 	</div>
-	<% unless @blog.tags.count.zero? %>	
+	<% unless @blog.tags.count.zero? %>
 	<p>
 	Tags: <%= raw @blog.tags.map { |t| link_to t, tag_path(:tag=>t.name) }.join(', ') %>
 	</p>
-	<% end %>	
+	<% end %>
 	<% unless @blog_comments.empty? %>
-	<div class="box">
-		<div class="box_header">
-			<h2>댓글</h2>
-			<div class="box_icon">
-				<a href="#" class="btn_minimize"><i class="glyphicon glyphicon-chevron-up"></i></a>
-				<a href="#" class="btn_close"><i class="glyphicon glyphicon-remove"></i></a>
-			</div>
-		</div>
+	<section class="comment_list">
+		<h3>댓글</h3>
 		<div class="box_content">
 			<ul class="sl_comment_list_layer media-list">
 				<%= render @blog_comments %>
 			</ul>
-			<%= paginate @blog_comments %>			
+			<%= paginate @blog_comments %>
 		</div>
-	</div>
+	</section>
 	<% end %>
-	<%= render "blog_comments/form" %>
+	<%=link_to t(:link_new_blog_comment_form),new_blog_blog_comment_path(@blog) %>
 	<div id="sl_content_bottom_menu">
 		<%= link_to t(:link_list),blogs_path %>
 		<% if user_signed_in? %>
